Update 3.1 Web Scraping Basics.ipynb

--- a/Module 3/3.1 Web Scraping Basics.ipynb
+++ b/Module 3/3.1 Web Scraping Basics.ipynb
@@ -29,44 +29,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "58e872a85305f60b",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-09T22:39:28.531377Z",
-     "start_time": "2024-03-09T22:39:28.409599Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-12-29T19:06:06.490253Z",
+     "start_time": "2024-12-29T19:06:06.486725Z"
     }
    },
-   "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "1ca0972c61b02590",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-09T22:39:29.629878Z",
-     "start_time": "2024-03-09T22:39:28.866764Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-12-29T19:06:37.263297Z",
+     "start_time": "2024-12-29T19:06:36.487978Z"
     }
    },
-   "outputs": [],
    "source": [
     "# We'll start by scraping a normal ecommerce website, Gymshark.com\n",
     "# First, we'll send an HTTP request to the URL of the webpage we want to access\n",
     "\n",
-    "url = \",\"\n",
+    "url = \"https://www.gymshark.com/products/gymshark-crest-hoodie-black-ss22\"\n",
     "\n",
     "# Let's also go get our headers to pass in\n",
     "headers = {\n",
@@ -77,22 +75,27 @@
     "    url,\n",
     "    headers=headers\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "6cb0b8d512a7053e",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-09T22:39:33.644964Z",
-     "start_time": "2024-03-09T22:39:33.638424Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-12-29T19:06:37.957536Z",
+     "start_time": "2024-12-29T19:06:37.950307Z"
     }
    },
+   "source": [
+    "# We can check the status code of the response to see if the request was successful\n",
+    "response.status_code"
+   ],
    "outputs": [
     {
      "data": {
@@ -100,15 +103,12 @@
        "200"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# We can check the status code of the response to see if the request was successful\n",
-    "response.status_code"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -131,81 +131,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "9c665a9b6ec39b66",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-09T22:40:21.485069Z",
-     "start_time": "2024-03-09T22:40:21.463687Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-12-29T19:06:39.383105Z",
+     "start_time": "2024-12-29T19:06:39.360991Z"
     }
    },
-   "outputs": [],
    "source": [
     "# We can then parse the HTML content of the webpage using BeautifulSoup\n",
     "soup = BeautifulSoup(response.content, \"html.parser\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
    "id": "613c9912bb9b7fc5",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-09T22:49:47.449420Z",
-     "start_time": "2024-03-09T22:49:47.442516Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-12-29T19:06:40.208516Z",
+     "start_time": "2024-12-29T19:06:40.204907Z"
     }
    },
-   "outputs": [],
    "source": [
     "# Now let's use some css selectors to extract the data we want\n",
     "# Let's start off by getting the title of the product\n",
     "# To select just one element, we can use the `select_one` method\n",
     "title = soup.select_one('h1[class=\"product-information_title__3jR8K\"]').text"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
    "id": "7d6763c6bc4096b",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-09T22:50:22.281365Z",
-     "start_time": "2024-03-09T22:50:22.239073Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-12-29T19:06:41.066773Z",
+     "start_time": "2024-12-29T19:06:41.061740Z"
     }
    },
-   "outputs": [],
    "source": [
     "# Now lets get the price of the product\n",
     "price = soup.select_one('div[class=\"product-information_price__pEWjj\"]').text"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
    "id": "559e7b8b71f55096",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-09T22:54:47.752275Z",
-     "start_time": "2024-03-09T22:54:47.749146Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-12-29T19:06:41.743108Z",
+     "start_time": "2024-12-29T19:06:41.734567Z"
     }
    },
-   "outputs": [],
    "source": [
     "# Now let's try getting multiple elements\n",
     "# To do this, we can use the `select` method\n",
@@ -213,36 +211,38 @@
     "# Let's get the colors of the product\n",
     "# We can do pathings with css selectors to get to the element we want\n",
     "colors = soup.select('div[class=\"variants_variants__C9MOx\"] a img')"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
    "id": "dd3a0df43986506",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-09T22:54:48.288325Z",
-     "start_time": "2024-03-09T22:54:48.286012Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-12-29T19:06:42.652673Z",
+     "start_time": "2024-12-29T19:06:42.650442Z"
     }
    },
+   "source": [
+    "# That returned a list of elements, so we can loop through them to get the text\n",
+    "colors = [x.attrs['alt'].replace(title + ' in', '').strip() for x in colors]\n",
+    "print(colors)"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Black', 'Light Pink', 'Navy', 'Core Olive', 'Stone Grey', 'Light Grey Marl', 'Natural Sage Green', 'Faded Blue']\n"
+      "['Light Grey Marl', 'Black', 'Navy']\n"
      ]
     }
    ],
-   "source": [
-    "# That returned a list of elements, so we can loop through them to get the text\n",
-    "colors = [x.attrs['alt'].replace(title + ' in', '').strip() for x in colors]\n",
-    "print(colors)"
-   ]
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -265,43 +265,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
    "id": "c7288da1d86a0531",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-09T23:06:01.680879Z",
-     "start_time": "2024-03-09T23:06:01.676384Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-12-29T19:06:44.482540Z",
+     "start_time": "2024-12-29T19:06:44.478730Z"
     }
    },
-   "outputs": [],
    "source": [
     "# So we could rewrite colors as \n",
     "colors = soup.select(f'img[alt*=\"{title} in \"]')"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 12
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
    "id": "772ab5d79b0601da",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-09T23:08:37.921883Z",
-     "start_time": "2024-03-09T23:08:37.918186Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-12-29T19:06:45.270627Z",
+     "start_time": "2024-12-29T19:06:45.267027Z"
     }
    },
-   "outputs": [],
    "source": [
     "# if we wanted to get the button that had the \"add to bag\"\n",
     "add_to_bag = soup.select_one('button:-soup-contains(\"Add to bag\")')"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -316,47 +316,79 @@
     "### Exercise:\n",
     "\n",
     "Now that you've seen how to get the colors, use the same method to get the sizes of the product\n",
-    "Make sure that you only select the sizes for this specific product and not all the sizes on the page (There should be 8)"
+    "Make sure that you only select the sizes for this specific product and not all the sizes on the page (There should be 7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
    "id": "7ea2f999f000f26",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-09T22:59:06.331763Z",
-     "start_time": "2024-03-09T22:59:06.322420Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-12-29T19:06:48.311027Z",
+     "start_time": "2024-12-29T19:06:48.308842Z"
     }
    },
-   "outputs": [],
    "source": [
     "sizes = \"YOUR CODE HERE\""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 14
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
    "id": "f839278b1fee9ac7",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-09T23:09:46.914323Z",
-     "start_time": "2024-03-09T23:09:46.911345Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-12-29T19:15:27.631958Z",
+     "start_time": "2024-12-29T19:15:27.627811Z"
     }
    },
-   "outputs": [],
    "source": [
-    "# This is the answer\n",
-    "sizes = soup.select('button[data-locator-id*=\"pdp-size\"]')"
-   ]
+    "# This is one of the couple of ways to do it\n",
+    "sizes = soup.select('fieldset[class*=\"add-to-cart_sizes__MFqYI\"] label[data-locator-id*=\"pdp-size\"]')"
+   ],
+   "outputs": [],
+   "execution_count": 30
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-29T19:15:27.941024Z",
+     "start_time": "2024-12-29T19:15:27.938338Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "[x.text for x in sizes]",
+   "id": "922e7c7696e93375",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['xs', 's', 'm', 'l', 'xl', 'xxl', '3xl']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 31
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "356e1d186efd4737"
   }
  ],
  "metadata": {
