--- a/Module 3/3.6 Fotmob.ipynb
+++ b/Module 3/3.6 Fotmob.ipynb
@@ -1,72 +1,109 @@
 {
  "cells": [
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "initial_id",
+   "outputs": [],
+   "execution_count": null,
+   "source": "#!pip install cloudscraper",
+   "id": "6db2387257301409"
+  },
+  {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-20T15:33:37.248789Z",
-     "start_time": "2024-04-20T15:33:37.164548Z"
+     "end_time": "2025-02-02T19:55:10.140200Z",
+     "start_time": "2025-02-02T19:55:10.122420Z"
     }
    },
+   "cell_type": "code",
    "outputs": [],
-   "source": "import requests"
+   "execution_count": 15,
+   "source": [
+    "import requests\n",
+    "import cloudscraper"
+   ],
+   "id": "initial_id"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
    "source": [
     "# How to get the match id from a url\n",
-    "url = 'https://www.fotmob.com/matches/ac-milan-vs-roma/2gl9pd#4446402'\n",
+    "url = 'https://www.fotmob.com/matches/barcelona-vs-deportivo-alaves/2tw7n8#4506974'\n",
     "match_id = url.split('#')[-1]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T15:34:05.848143Z",
-     "start_time": "2024-04-20T15:34:05.845404Z"
+     "end_time": "2025-02-02T19:55:10.391414Z",
+     "start_time": "2025-02-02T19:55:10.388841Z"
     }
    },
-   "id": "56852ddb4da09ed3"
+   "id": "56852ddb4da09ed3",
+   "outputs": [],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-02T19:56:32.263337Z",
+     "start_time": "2025-02-02T19:56:31.868165Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "request_token = requests.get('http://46.101.91.154:6006/').json()\n",
+    "\n",
+    "session = cloudscraper.create_scraper(\n",
+    "    browser={\"browser\": \"chrome\", \"platform\": \"linux\", \"mobile\": False}\n",
+    ")\n",
+    "\n",
+    "session.headers.update({\n",
+    "    'x-mas': request_token['x-mas']\n",
+    "})"
+   ],
+   "id": "2ae6099a18bffd1b",
+   "outputs": [],
+   "execution_count": 18
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
    "source": [
     "params = {\n",
     "    'matchId': match_id,\n",
     "}\n",
     "\n",
-    "response = requests.get('https://www.fotmob.com/api/matchDetails', params=params)"
+    "response = session.get(\n",
+    "    'https://www.fotmob.com/api/matchDetails', \n",
+    "    params=params\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T15:34:22.151001Z",
-     "start_time": "2024-04-20T15:34:20.621157Z"
+     "end_time": "2025-02-02T19:57:16.033479Z",
+     "start_time": "2025-02-02T19:57:14.943571Z"
     }
    },
-   "id": "393a8434381b02c8"
+   "id": "393a8434381b02c8",
+   "outputs": [],
+   "execution_count": 19
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
    "source": [
     "data = response.json()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-20T15:35:16.722623Z",
-     "start_time": "2024-04-20T15:35:16.719653Z"
+     "end_time": "2025-02-02T19:57:16.632142Z",
+     "start_time": "2025-02-02T19:57:16.616013Z"
     }
    },
-   "id": "591457693f1cb832"
+   "id": "591457693f1cb832",
+   "outputs": [],
+   "execution_count": 20
   },
   {
    "cell_type": "code",
@@ -133,6 +170,33 @@
     "collapsed": false
    },
    "id": "497dba46ec215894"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-03T13:38:08.334053Z",
+     "start_time": "2025-02-03T13:38:07.502586Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "session = cloudscraper.create_scraper(\n",
+    "    browser={\"browser\": \"chrome\", \"platform\": \"linux\", \"mobile\": False}\n",
+    ")\n",
+    "\n",
+    "response = session.get('https://www.whoscored.com/matches/1834958/live/italy-serie-a-2024-2025-roma-napoli')"
+   ],
+   "id": "b7c0da7b3df722b3",
+   "outputs": [],
+   "execution_count": 22
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "response",
+   "id": "fa6ad21a598e77ab"
   }
  ],
  "metadata": {
